--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<script src="js/script.js"></script>
 </head>
 <body>
-	<!-- actualizacion 12:26 am oaguillon udating 3:15-->
+	<!-- actualizacion 12:26 am oaguillon viernes udating 3:15-->
 <section id="formulario">
 	<h1>Envio de formulario CrossDomain</h1>
 	<form id="field">
