Adapting new print into div#resultados

--- a/index.html
+++ b/index.html
@@ -44,7 +44,21 @@
 	</form>
 </section>
     
-<section id="resultado"></section>
+<section id="resultado">
+	<h1 id="name">
+		<!-- Impresiones de resultados via javascript -->		
+	</h1>
+	<div class="grid1">
+		<div class="" id="Email">
+		<!-- Impresiones de resultados via javascript -->
+		</div>
+	</div>
+	<div class="grid1">
+		<div class="" id="CellPhone">
+		<!-- Impresiones de resultados via javascript -->
+		</div>
+	</div>
+</section>
 
 </body>
 </html>
