--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 	<meta http-equiv="content-script-type" content="text/javascript">
 	<title>Prueba de insercion de datos crossDomain</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
