--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link type="text/plain" rel="Oscar Manuel Aguillon Silva" href="humans.txt" />
+	<!-- <link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic,700italic' rel='stylesheet' type='text/css'> -->
 	<script src="js/jquery-1.7.2.min.js"></script>
 
 	<script src="js/script.js"></script>
 </head>
 <body>
+	
 	<!-- actualizacion 12:26 am oaguillon viernes udating 3:15-->
 <section id="formulario">
 	<h1>Envio de formulario CrossDomain</h1>
@@ -60,6 +62,6 @@
 		</div>
 	</div>
 </section>
-
+<section id="debug"></section>
 </body>
 </html>
