Implementing ajax method

--- a/index.html
+++ b/index.html
@@ -46,7 +46,11 @@
 
 	</form>
 </section>
-    
+
+<section id="loading">
+	<img src='images/loading.gif'>
+</section>
+
 <section id="resultado">
 	<h1 id="name">
 		<!-- Impresiones de resultados via javascript -->		
