--- a/index.html
+++ b/index.html
@@ -15,6 +15,10 @@
 </head>
 <body>
 	
+<section id="top">
+
+</section>
+<input type="button" name="clean" id="clean" value="clean">
 	<!-- actualizacion 12:26 am oaguillon viernes udating 3:15-->
 <section id="formulario">
 	<h1>Envio de formulario CrossDomain</h1>
