--- a/index.html
+++ b/index.html
@@ -8,68 +8,50 @@
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css">
 	<link type="text/plain" rel="Oscar Manuel Aguillon Silva" href="humans.txt" />
-	<!-- <link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic,700italic' rel='stylesheet' type='text/css'> -->
-	<script src="js/jquery-1.7.2.min.js"></script>
-
+	<link href='http://fonts.googleapis.com/css?family=Ubuntu+Mono:400,700,400italic,700italic' rel='stylesheet' type='text/css'>		
+	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.css" />
+	<script src="http://code.jquery.com/jquery-1.9.1.min.js"></script>
+	<script src="http://code.jquery.com/mobile/1.3.2/jquery.mobile-1.3.2.min.js"></script>
 	<script src="js/script.js"></script>
 </head>
 <body>
 	
-<section id="top">
 
-</section>
-<input type="button" name="clean" id="clean" value="clean">
 	<!-- actualizacion 12:26 am oaguillon viernes udating 3:15-->
-<section id="formulario">
-	<h1>Envio de formulario CrossDomain</h1>
-	<form id="field">
-		<div>
-			<label for="">Name</label>
-			<input type="text" name="name">
-		</div>
+<div data-role="page">
+ 
+        <div data-role="header">
+            <h1>Aplicacion</h1>
+        </div><!-- /header -->
+ 
+        <div data-role="content">
+        <section id="top">
 
-		<div>
-			<label for="">Last Name</label>
-			<input type="text" name="last-name">
-		</div>
+		</section>
+		<input type="button" name="clean" id="clean" value="clean">
+          	<section id="formulario">
+          		<form>
+          			<input type="text" name="mail" id="textinput-s" placeholder="Text input" value="" data-clear-btn="true">
+          			<input type="password" name="pass" id="textinput-s" placeholder="Put yor pass" value="" data-clear-btn="true">
+					<input type="button" data-theme="b" id="send" value="Enviar">
+          		</form>
+          	</section>
+          	<div id="cont-load">
+				<section id="loading">
+					<img src='images/loading.gif'>
+				</section>
+			</div>
+			<section id="debug"></section>
 
-		<div>
-			<label for="">E-mail</label>
-			<input type="text" name="mail">
-		</div>
+        </div><!-- /content -->
+ 
+        <div data-role="footer">
+            <h4>My Footer</h4>
+        </div><!-- /footer -->
+ 
+    </div><!-- /page -->
 
-		<div>
-			<label for="">Cell phone</label>
-			<input type="text" name="cellPhone">
-		</div>
 
-		
-		<div>
-			<button type="button" id="send">Registrarme !</button>
-		</div>
 
-	</form>
-</section>
-
-<section id="loading">
-	<img src='images/loading.gif'>
-</section>
-
-<section id="resultado">
-	<h1 id="name">
-		<!-- Impresiones de resultados via javascript -->		
-	</h1>
-	<div class="grid1">
-		<div class="" id="Email">
-		<!-- Impresiones de resultados via javascript -->
-		</div>
-	</div>
-	<div class="grid1">
-		<div class="" id="CellPhone">
-		<!-- Impresiones de resultados via javascript -->
-		</div>
-	</div>
-</section>
-<section id="debug"></section>
 </body>
 </html>
