--- a/index.html
+++ b/index.html
@@ -18,17 +18,14 @@
 	
 
 	<!-- actualizacion 12:26 am oaguillon viernes udating 3:15-->
-<div data-role="page">
+<div data-role="page" id="pagina1">
  
         <div data-role="header">
             <h1>Aplicacion</h1>
         </div><!-- /header -->
  
         <div data-role="content">
-        <section id="top">
 
-		</section>
-		<input type="button" name="clean" id="clean" value="clean">
           	<section id="formulario">
           		<form>
           			<input type="text" name="mail" id="textinput-s" placeholder="Text input" value="" data-clear-btn="true">
@@ -41,16 +38,28 @@
 					<img src='images/loading.gif'>
 				</section>
 			</div>
-			<section id="debug"></section>
+			
 
         </div><!-- /content -->
+
+
  
         <div data-role="footer">
             <h4>My Footer</h4>
         </div><!-- /footer -->
  
     </div><!-- /page -->
-
+ 	<section data-role="page" id="pagina2">
+			<header data-role="header">
+				<h3>Pagina 2</h3>
+			</header>
+				<article data-role="content">
+					<section id="top"></section>
+					<input type="button" name="clean" id="clean" value="clean">
+					<section id="debug"></section>
+				</article>
+			
+		</section>
 
 
 </body>
